# aletheia

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  install.bat  pyproject.toml  requirements.txt  run_gui.bat  run_watch.bat  test_run.bat  test_run.py
.github/workflows/: ci.yml
src/aletheia/: __init__.py  api.py  audio.py  config.py  filter.py  gui.py  main.py  pipeline.py  printing.py  style.py  transcribe.py  tts.py  watch.py
tests/: test_config.py  test_filter.py  test_pipeline.py  test_style.py
